# apertium-smn

./: .gitignore  Makefile.am  README  apertium-smn.pc.in  configure.ac  modes.xml
test/: tests.json
